objects/ccpt__Column__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Board__c</fullName>
        <label>Board</label>
        <referenceTo>ccpt__Board__c</referenceTo>
        <relationshipLabel>Columns</relationshipLabel>
        <relationshipName>Columns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Card_Count__c</fullName>
        <label>Card Count</label>
        <summaryForeignKey>ccpt__Card__c.ccpt__Column__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag indicating whether the cards in this Column are &quot;complete&quot; or not. Only 1 column may have this set to true</description>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt__OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>